--- a/.config/sway/config
+++ b/.config/sway/config
@@ -28,12 +28,8 @@ input "type:keyboard" {
 }
 
 # Rules
-    for_window [app_id="galculator"] floating enable
-    for_window [app_id="pavucontrol"] floating enable
-    for_window [app_id="Alacritty"] floating enable, resize set 1280 720
-    for_window [app_id="nwg-look"] floating enable
-    for_window [app_id="mpv"] floating enable, resize set 1280 720
-    for_window [app_id="qimgv"] floating enable, resize set 1280 720
+for_window [app_id="Alacritty"] floating enable, resize set 1280 720
+for_window [app_id="nwg-look"] floating enable
 
 ## Borders
 client.focused          #bd93f9 #bd93f9 #282a36 #bd93f9 #bd93f9
@@ -46,7 +42,8 @@ client.background       #282a36
 include /etc/sway/config.d/*
 
 # Workspaces variables
-# 1, 2 - Development and web: Terminal with tmux and Neovim, Firefox
+# 1, 2 - Development and web: Terminal with tmux and Neovim, Zen browser and
+# Obsidian
 set $ws1 "1:  "
 set $ws2 "2:  "
 # 3, 4 - Communication: Email and other communication apps
