--- a/.config/i3/config
+++ b/.config/i3/config
@@ -15,7 +15,7 @@ exec_always --no-startup-id xss-lock --transfer-sleep-lock -- ~/dotfiles/.local/
 bindsym Mod4+x mode "lock"
 
 mode "lock" {
-    bindsym l exec i3lock --ignore-empty-password --tiling --image='~/dotfiles/.config/backgrounds/signalis_wallpaper_2.png' 2>/dev/null, mode "default"
+    bindsym l exec i3lock --ignore-empty-password --tiling --image='~/.config/backgrounds/signalis_wallpaper_2.png' 2>/dev/null, mode "default"
     bindsym s exec --no-startup-id sleep 1 && xset dpms force suspend , mode "default"
     bindsym Return mode "default"
     bindsym Escape mode "default"
@@ -35,10 +35,10 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 
 # use these keys for focus, movement, and resize directions when reaching for
 # the arrows is not convenient
-set $up l
-set $down k
-set $left j
-set $right semicolon
+set $right l
+set $up k
+set $down j
+set $left h
 
 # use Mouse+Mod4 to drag floating windows to their wanted position
 floating_modifier Mod4
@@ -67,7 +67,7 @@ bindsym Mod4+p move workspace to output right
 bindsym Mod4+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym Mod4+d exec --no-startup-id dmenu_run
+bindsym Mod4+d exec --no-startup-id dmenu_run -b
 
 # change focus
 bindsym Mod4+$left focus left
@@ -94,7 +94,7 @@ bindsym Mod4+Shift+Up move up
 bindsym Mod4+Shift+Right move right
 
 # split in horizontal orientation
-bindsym Mod4+h split h
+# bindsym Mod4+h split h
 
 # split in vertical orientation
 bindsym Mod4+v split v
@@ -195,12 +195,20 @@ mode "resize" {
         bindsym Mod4+r mode "default"
 }
 
+# Brightness
+bindsym XF86MonBrightnessUp exec brightnessctl set +5%
+bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
+
 bindsym Mod4+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3status -c ~/.config/i3status/config
+  # i3bar configuration
+    status_command i3status
+    position top
+    font pango:Ubuntu 10
+    separator_symbol " | "
 }
 
 # Use 'xprop' in the terminal to find the class name, similar to:
@@ -209,7 +217,7 @@ for_window [class="Brave-browser"] move to workspace $ws2
 for_window [class="obsidian"] move to workspace $ws3
 
 # Wallpaper
-exec_always feh --bg-fill ~/.config/backgrounds/signalis_wallpaper.png &
+exec_always feh --bg-fill ~/.config/backgrounds/afoolmoonnight.jpg &
 
 # Transparency with picom compositor
 exec_always picom -f
