--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -9,9 +9,9 @@
 ###############################################################################
 
 general {
-    output_format = "i3bar"
-    interval 		= 1
-    colors 			= true
+  output_format = "i3bar"
+    interval = 5
+    colors = true
     color_good      = '#88b090'
     color_degraded  = '#ccdc90'
     color_bad       = '#e89393'
@@ -19,28 +19,20 @@ general {
 
 order += "volume master"
 order += "disk /"
-order += "disk /home"
-order += "wireless wlp4s0"
-order += "ethernet enp0s25"
 order += "battery 0"
 order += "cpu_usage 0"
+order += "cpu_temperature 0"
 order += "memory"
 order += "load"
 order += "tztime local"
 
-wireless wlp4s0 {
-    format_up = "%quality  %essid %ip"
-    format_down = ""
-}
-
-ethernet enp0s25 {
-    #if you use %speed, i3status requires root privileges
-    format_up = "%ip (%speed)"
-    format_down = ""
+cpu_temperature 0 {
+  format = "%degrees °C"
+    path = "/sys/class/hwmon/hwmon4/temp1_input"
 }
 
 battery 0 {
-    format = "%status %percentage %remaining"
+  format = "%status %percentage %remaining"
     format_down = ""
     last_full_capacity = true
     integer_battery_capacity = true
@@ -53,36 +45,28 @@ battery 0 {
     status_full = " "
 }
 
-run_watch DHCP {
-    pidfile = "/var/run/dhclient*.pid"
-}
-
-run_watch VPN {
-    pidfile = "/var/run/vpnc/pid"
-}
-
 tztime local {
-    format = " %H:%M:%S"
+  format = " %H:%M:%S"
 }
 
 load {
-    format = " %1min"
+  format = " %1min"
 }
 
 cpu_usage {
-    format = " %usage"
+  format = " %usage"
 }
 
 disk "/" {
-	format = " %avail"
-	prefix_type	= custom
-	low_threshold = 20
-	threshold_type = percentage_avail
+  format = " %avail"
+    prefix_type	= custom
+    low_threshold = 20
+    threshold_type = percentage_avail
 }
 
 volume master {
-    format = "%volume  "
-    format_muted = " " 
+  format = "%volume  "
+    format_muted = " "
     device = "default"
     mixer = "Master"
     mixer_idx = 0
