--- a/.config/i3/config
+++ b/.config/i3/config
@@ -8,8 +8,8 @@ exec --no-startup-id dex --autostart --environment i3
 # exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # Setup xss-lock daemon
-exec_always --no-startup-id xset +dpms dpms 0 600 600 
-exec_always --no-startup-id xss-lock --transfer-sleep-lock -- ~/dotfiles/.local/bin/lock.sh
+exec_always --no-startup-id xset +dpms dpms 0 600 600
+exec_always --no-startup-id xss-lock --transfer-sleep-lock -- ~/scripts/lock.sh
 #exec_always --no-startup-id xss-lock --transfer-sleep-lock -- i3lcok --nofork
 
 bindsym Mod4+x mode "lock"
@@ -128,7 +128,7 @@ bindsym Mod4+minus scratchpad show
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1:  Terminal" 
+set $ws1 "1:  Terminal"
 set $ws2 "2:  Brave"
 set $ws3 "3:  Obsidian"
 set $ws4 "4"
@@ -213,7 +213,7 @@ bar {
 
 # Use 'xprop' in the terminal to find the class name, similar to:
 # WM_CLASS(STRING) = "brave-browser", "Brave-browser"
-for_window [class="Brave-browser"] move to workspace $ws2 
+for_window [class="Brave-browser"] move to workspace $ws2
 for_window [class="obsidian"] move to workspace $ws3
 
 # Wallpaper
