--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -17,7 +17,7 @@ bind C-n next-window
 
 # Vim style pane selection
 bind h select-pane -L
-bind j select-pane -D 
+bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
@@ -49,7 +49,10 @@ run '~/.tmux/plugins/tpm/tpm'
 
 # set vi-mode
 set-window-option -g mode-keys vi
-# keybindings
+
+## Keybindings
+
+# Copy: prefix + [
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
