--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,10 +1,13 @@
-# set-option -sa terminal-overrides ",screen-256color*:Tc"
+# reload configuration
+unbind r
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "tmux-reloaded"
 
-# Upgrade $TERM
+# set terminal
 set-option -g default-terminal "tmux-256color"
 set-option -a terminal-features 'xterm-256color:RGB'
 set-option -a terminal-overrides 'xterm-256color:Tc'
-set -g mouse on
+set -g mouse on # enable mouse use (e.g., resize panes)
+set-window-option -g mode-keys vi # vi mode
 
 unbind C-b
 set -g prefix C-space
@@ -27,16 +30,6 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-# Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-
-# Shift arrow to switch windows
-bind -n S-Left  previous-window
-bind -n S-Right next-window
-
 # Shift Alt vim keys to switch windows
 bind -n M-H previous-window
 bind -n M-L next-window
@@ -45,10 +38,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-run '~/.tmux/plugins/tpm/tpm'
-
-# set vi-mode
-set-window-option -g mode-keys vi
+run '~/.tmux/plugins/tpm/tpm' # prefix + I to install
 
 ## Keybindings
 
@@ -60,52 +50,49 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+# Synchronize panes
+bind-key b set-window-option synchronize-panes\; display-message "synchronize mode toggled."
 
 ## Stauts Config
 
 # Status at the bottom
 set-option -g status on
 set-option -g status-position bottom
+setw -g monitor-activity on
 
-
-# Refresh 'status-left' and 'status-right' more often, from every 15s to 5s
+# Refresh 'status-left' and 'status-right' more often, from 15s to 5s
 set-option -g status-interval 5
 
 # Basic status bar colors
-set-option -g status-style bg=default,fg=white
+set-option -g status-style bg=default,fg=#C5C9C5
 
-# Left side of status bar
+# Left side of status bar (Session Name)
 set-option -g status-left-length 40
-set-option -g status-left "#[fg=#C8C093,bg=#16161D] #S #[fg=default,bg=default] "
+set-option -g status-left "#[fg=#E6C384,bg=#181616] #S #[fg=default,bg=default] "
 
 # Window status
-set-option -g window-status-format "#[fg=white,bg=brightblack] #I #[fg=white,bg=#363636] #W "
-set-option -g window-status-current-format "#[fg=#C8C093,bg=#16161D] #I #[fg=#DCD7BA,bg=#223249] #W "
+set-option -g window-status-format "#[fg=#727169,bg=#181616] #I #[fg=#727169,bg=#393836] #W "
+set-option -g window-status-current-format "#[fg=#E6C384,bg=#181616] #I #[fg=#E6C384,bg=#393836] #W "
 set-option -g window-status-separator ""
 set-option -g status-justify left
 
-# Right side of status bar
+# Right side of status bar (Current Path)
 set-option -g status-right-length 85
-#set-option -g status-right "#[fg=brightwhite,bg=#363636] %a, %d %b %H:%M #[fg=brightwhite,bg=brightblack] #{pane_current_path}"
-set-option -g status-right "#[fg=brightwhite,bg=#363636]#[fg=brightwhite,bg=brightblack] #{pane_current_path}"
+set-option -g status-right "#[fg=#C5C9C5,bg=#393836] #{pane_current_path} "
 
 # Pane border
-set-option -g pane-border-style bg=default,fg=brightblack
+set-option -g pane-border-style bg=default,fg=#4A4A4A
 set-option -g pane-active-border-style bg=default,fg=white
 
-# Pane number indicator
-set-option -g display-panes-colour brightblack
-set-option -g display-panes-active-colour brightwhite
-
-# Clock mode
-set-option -g clock-mode-colour white
-set-option -g clock-mode-style 24
+# # Pane number indicator
+set-option -g display-panes-colour #4A4A4A
+set-option -g display-panes-active-colour #E6C384
 
 # Message
-set-option -g message-style bg=default,fg=default
+# set-option -g message-style bg=default,fg=default
+# Message
+set-option -g message-style bg=#181616,fg=#C5C9C5
 
-unbind r
-bind r source-file ~/.config/tmux/tmux.conf \; display-message "tmux-reloaded"
 bind i run-shell "tmux neww cht.sh"
 
 # Address vim mode switching delay (http://superuser.com/a/252717/65504)
@@ -122,3 +109,8 @@ set -g focus-events on
 
 # Super useful when using "grouped sessions" and multi-monitor setup
 setw -g aggressive-resize on
+# Do NOT reset the color of the tab after activity stops occuring
+setw -g monitor-silence 0
+
+# Disable bell
+setw -g monitor-bell off
