--- a/.config/i3/config
+++ b/.config/i3/config
@@ -48,9 +48,9 @@ floating_modifier Mod4
 tiling_drag modifier titlebar
 
 # Screenshots
-bindsym Print exec --no-startup-id maim "/home/$USER/Pictures/$(date)"
-bindsym Mod4+Print exec --no-startup-id maim --window $(xdotool getactivewindow) "/home/$USER/Pictures/$(date)"
-bindsym Shift+Print exec --no-startup-id maim --select "/home/$USER/Pictures/$(date)"
+bindsym Print exec --no-startup-id maim "/home/$USER/Screenshots/$(date)"
+bindsym Mod4+Print exec --no-startup-id maim --window $(xdotool getactivewindow) "/home/$USER/Screenshots/$(date)"
+bindsym Shift+Print exec --no-startup-id maim --select "/home/$USER/Screenshots/$(date)"
 
 ## Clipboard Screenshots
 bindsym Ctrl+Print exec --no-startup-id maim | xclip -selection clipboard -t image/png
@@ -221,7 +221,7 @@ exec_always feh --bg-fill ~/.config/backgrounds/afoolmoonnight.jpg &
 
 # Transparency with picom compositor
 exec_always picom -f
-exec_always keys
+exec_always ./keys
 
 #######################################################################
 # automatically start i3-config-wizard to offer the user to create a
