chore: Clean tmux configuration

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,28 +1,20 @@
-# reload configuration
-unbind r
-bind r source-file ~/.config/tmux/tmux.conf \; display-message "tmux-reloaded"
-
-# set terminal
-set-option -g default-terminal "tmux-256color"
-set-option -a terminal-features 'xterm-256color:RGB'
-set-option -a terminal-overrides 'xterm-256color:Tc'
-set -g mouse on # enable mouse use (e.g., resize panes)
-set-window-option -g mode-keys vi # vi mode
-
+# change default prefix
 unbind C-b
 set -g prefix C-space
 bind C-space send-prefix
 bind space last-window
 
-# Easier and faster switching between next/prev window
-bind C-p previous-window
-bind C-n next-window
+# reload configuration
+unbind r
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "tmux-reloaded"
 
-# Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+set -g default-terminal "tmux-256color"
+set -sa terminal-overrides ",xterm*:Tc"
+set -a terminal-features 'xterm-256color:RGB'
+
+################################################################################
+## Options
+################################################################################
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -34,83 +26,87 @@ set-option -g renumber-windows on
 bind -n M-H previous-window
 bind -n M-L next-window
 
+set -s escape-time 10 # Address vim mode switching delay (http://superuser.com/a/252717/65504)
+set -g history-limit 50000 # Increase scrollback buffer size from 2000 to 50000 lines
+set -g display-time 2000 # Increase tmux messages display duration from 750ms to 2s
+set -s focus-events on # Focus events enabled for terminals that support them
+set -s extended-keys on # Extra keys for prefix
+setw -g aggressive-resize on # Super useful when using "grouped sessions" and multi-monitor setup
+setw -g monitor-silence 0 # Do NOT reset the color of the tab after activity stops occuring
+setw -g monitor-bell off # Disable bell
+set -g mouse on # enable mouse use (e.g., resize panes)
+set-window-option -g mode-keys vi # vi mode
+
+# Set the title of the window to its default (change 'tmux a')
+set -g set-titles on
+set -g set-titles-string "#{pane_title}"
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 run '~/.tmux/plugins/tpm/tpm' # prefix + I to install
 
+################################################################################
 ## Keybindings
+################################################################################
+
+bind b set-window-option synchronize-panes\; display-message "synchronize mode toggled."
+
+# better switching between next/prev window
+bind C-p previous-window
+bind C-n next-window
+
+# vim style pane selection
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # Copy: prefix + [
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
+# Split pane or new window start at directory of current directory
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
-# Synchronize panes
-bind-key b set-window-option synchronize-panes\; display-message "synchronize mode toggled."
 
+################################################################################
 ## Stauts Config
+################################################################################
 
-# Status at the bottom
-set-option -g status on
-set-option -g status-position bottom
+# Status at the bottom (default)
+set -g status on
+set -g status-position bottom
 setw -g monitor-activity on
 
 # Refresh 'status-left' and 'status-right' more often, from 15s to 5s
-set-option -g status-interval 5
+set -g status-interval 5
 
 # Basic status bar colors
-set-option -g status-style bg=default,fg=#C5C9C5
+set -g status-style bg=default,fg=#C5C9C5
 
 # Left side of status bar (Session Name)
-set-option -g status-left-length 40
-set-option -g status-left "#[fg=#E6C384,bg=#181616] #S #[fg=default,bg=default] "
+set -g status-left-length 40
+set -g status-left "#[fg=#E6C384,bg=#181616] #S #[fg=default,bg=default] "
 
 # Window status
-set-option -g window-status-format "#[fg=#727169,bg=#181616] #I #[fg=#727169,bg=#393836] #W "
-set-option -g window-status-current-format "#[fg=#E6C384,bg=#181616] #I #[fg=#E6C384,bg=#393836] #W "
-set-option -g window-status-separator ""
-set-option -g status-justify left
+set -g window-status-format "#[fg=#727169,bg=#181616] #I #[fg=#727169,bg=#393836] #W "
+set -g window-status-current-format "#[fg=#E6C384,bg=#181616] #I #[fg=#E6C384,bg=#393836] #W "
+set -g window-status-separator ""
+set -g status-justify left
 
 # Right side of status bar (Current Path)
-set-option -g status-right-length 85
-set-option -g status-right "#[fg=#C5C9C5,bg=#393836] #{pane_current_path} "
+set -g status-right-length 85
+set -g status-right "#[fg=#C5C9C5,bg=#393836] #{pane_current_path} "
 
 # Pane border
-set-option -g pane-border-style bg=default,fg=#4A4A4A
-set-option -g pane-active-border-style bg=default,fg=white
-
-# # Pane number indicator
-set-option -g display-panes-colour #4A4A4A
-set-option -g display-panes-active-colour #E6C384
+set -g pane-border-style bg=default,fg=#4A4A4A
+set -g pane-active-border-style bg=default,fg=white
 
 # Message
-# set-option -g message-style bg=default,fg=default
-# Message
-set-option -g message-style bg=#181616,fg=#C5C9C5
+set -g message-style bg=#181616,fg=#C5C9C5
 
 bind i run-shell "tmux neww cht.sh"
-
-# Address vim mode switching delay (http://superuser.com/a/252717/65504)
-set -s escape-time 10
-
-# Increase scrollback buffer size from 2000 to 50000 lines
-set -g history-limit 50000
-
-# Increase tmux messages display duration from 750ms to 2s
-set -g display-time 2000
-
-# Focus events enabled for terminals that support them
-set -g focus-events on
-
-# Super useful when using "grouped sessions" and multi-monitor setup
-setw -g aggressive-resize on
-# Do NOT reset the color of the tab after activity stops occuring
-setw -g monitor-silence 0
-
-# Disable bell
-setw -g monitor-bell off
