feat: Add nice tmux status bar

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -77,36 +77,54 @@ bind c new-window -c "#{pane_current_path}"
 ## Stauts Config
 ################################################################################
 
-# Status at the bottom (default)
+# --- Kanagawa Dragon Colors (kind of) ---
+set -g @bg           "#181616"
+set -g @fg           "#c5c9c5"
+set -g @fg_dim       "#727169"
+set -g @surface      "#393836"
+set -g @ui_border    "#4a4a4a"
+set -g @accent       "#e6c384"
+
+ROUND_OPEN="#(printf '\uE0B6')"
+ROUND_CLOSE="#(printf '\uE0B4')"
+TRIANGLE_OPEN="#(printf '\uE0B2')"
+TRIANGLE_CLOSE="#(printf '\uE0B0')"
+
+# --- Status Bar ---
 set -g status on
 set -g status-position bottom
 setw -g monitor-activity on
-
-# Refresh 'status-left' and 'status-right' more often, from 15s to 5s
 set -g status-interval 5
 
-# Basic status bar colors
-set -g status-style bg=default,fg=#C5C9C5
+set -g status-style fg="#{@fg}",bg="#{@bg}"
 
-# Left side of status bar (Session Name)
+# --- Status Left (Session Name) ---
 set -g status-left-length 40
-set -g status-left "#[fg=#E6C384,bg=#181616] #S #[fg=default,bg=default] "
+set -g status-left "\
+#[fg=#{@ui_border},bg=default]${ROUND_OPEN}\
+#[fg=#{@accent},bg=#{@ui_border}] #S \
+#[fg=#{@ui_border},bg=default]${TRIANGLE_CLOSE}\
+"
 
-# Window status
-set -g window-status-format "#[fg=#727169,bg=#181616] #I #[fg=#727169,bg=#393836] #W "
-set -g window-status-current-format "#[fg=#E6C384,bg=#181616] #I #[fg=#E6C384,bg=#393836] #W "
-set -g window-status-separator ""
-set -g status-justify left
-
-# Right side of status bar (Current Path)
+# --- Status Right (Current Path) ---
 set -g status-right-length 85
-set -g status-right "#[fg=#C5C9C5,bg=#393836] #{pane_current_path} "
+set -g status-right "\
+#[fg=#{@ui_border},bg=default]${TRIANGLE_OPEN}\
+#[fg=#{@accent},bg=#{@ui_border}] #{pane_current_path} \
+#[fg=#{@ui_border},bg=default]${ROUND_CLOSE}\
+"
 
-# Pane border
-set -g pane-border-style bg=default,fg=#4A4A4A
-set -g pane-active-border-style bg=default,fg=white
+# --- Window Status (middle) ---
+set -g window-status-format "#[fg=#{@fg_dim},bg=#{@bg}] #I #[fg=#{@fg_dim},bg=#{@surface}] #W "
+set -g window-status-current-format "#[fg=#{@accent},bg=#{@bg}] #I #[fg=#{@accent},bg=#{@surface}] #W "
+set -g window-status-separator ""
+set -g status-justify absolute-centre
 
-# Message
-set -g message-style bg=#181616,fg=#C5C9C5
+# --- Pane Borders ---
+set -g pane-border-style fg="#{@ui_border}",bg=default
+set -g pane-active-border-style fg="#{@fg}",bg=default
+
+# --- Message Style ---
+set -g message-style fg="#{@fg}",bg="#{@bg}"
 
 bind i run-shell "tmux neww cht.sh"
